--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for CPAN-Local
 
-0.01    2015-01-12 (PERLANCAR) (unreleased)
+0.01    2015-01-13 (PERLANCAR)
 
         - First version.
