--- a/Changes
+++ b/Changes
@@ -1,5 +1,37 @@
 Revision history for App-lcpan
 
+0.06    2015-01-14 (PERLANCAR) (unreleased)
+
+        [REMOVED FEATURES]
+
+        - Remove the feature that extracts dist metadata from Makefile.PL and
+          Build.PL because this is unsafe (we are running untrusted code). Note
+          that MetaCPAN also does not extract dist metadata from Makefile.PL and
+          Build.PL for the same reason.
+
+          Also, it has been pointed out to me that the current way is not proper
+          ("idiomatic"). The more proper way is to let perl run Makefile.PL and
+          Build.PL to generate Makefile/Build as well as MYMETA.{json,yml}. Then
+          we read MYMETA. Perhaps this feature will come back as an optional
+          plugin later, should there be any demand. BTW, Dist::Requires does
+          this kind of functionality.
+
+        - Also remove the feature that detects *.meta files, because these files
+          are not present in a mini CPAN mirror.
+
+        [DATABASE CHANGES]
+
+        - Upgrade schema to v3: add columns
+          has_{metayml,metajson,makefilepl,buildpl} to 'file' table.
+
+        - Clear data for reindexing.
+
+        [ENHANCEMENTS]
+
+        - New subcommands: releases, mod2dist, mod2rel, dist2rel, distmods,
+          authormods, authordists, authorrels.
+
+
 0.05    2015-01-14 (PERLANCAR)
 
         - No functional changes.
@@ -17,7 +49,7 @@ Revision history for App-lcpan
 
 0.03    2015-01-14 (PERLANCAR)
 
-	- The indexer now tries to extract dist information from Makefile.PL or
+	- The indexer now tries to extract dist metadata from Makefile.PL or
           Build.PL in addition to from META.{json,yml}. This allows for more
           thorough indexing of dependencies information (as well as distribution
           name & abstract), as a lot of older releases do not include CPAN META
