--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.07    2015-01-14 (PERLANCAR)
+
+        - Various small tweaks.
+
+
 0.06    2015-01-14 (PERLANCAR)
 
         [REMOVED FEATURES]
