--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-lcpan
 
+0.08    2015-01-14 (PERLANCAR)
+
+        - More tweaks and minor bug fixes.
+
+        - Add more examples.
+
+
 0.07    2015-01-14 (PERLANCAR)
 
         - Various small tweaks.
