--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-lcpan
 
+0.09    2015-01-20 (PERLANCAR)
+
+	- Skip erroneous version in dep information, instead of exploding.
+
+	- rdeps: Allow multiple --author & --author-isnt options.
+
+
 0.08    2015-01-14 (PERLANCAR)
 
         - More tweaks and minor bug fixes.
