--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.18    2015-04-15 (PERLANCAR)
+
+	- mods-from-same-dist: Accept multiple modules.
+
+
 0.17    2015-04-14 (PERLANCAR)
 
         - Add command: mods-from-same-dist.
