--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for App-lcpan
 
+0.20    2015-04-15 (PERLANCAR)
+
+	- Bump database schema version to 5 (add column is_latest to dist table
+          to ease queries).
+
+        - Allow --nolatest in addition to --latest.
+
+        - Add --latest filter option to 'modules' and 'mods-from-same-dist'
+          subcommands.
+
+
 0.19    2015-04-15 (PERLANCAR)
 
 	- Replace Module::CoreList->is_core with
