--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for App-lcpan
 
+0.21    2015-04-15 (PERLANCAR)
+
+        - [Removed feature] Remove separate 'update-files' and 'update-index'
+          subcommands, to simplify configuration. Merge options to 'update'
+          subcommand.
+
+        - update: Add filter options --include-author, --exclude-author.
+
+
 0.20    2015-04-15 (PERLANCAR)
 
 	- Bump database schema version to 5 (add column is_latest to dist table
