--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.24    2015-04-21 (PERLANCAR)
+
+	- deps: Accept multiple modules, speed up query.
+
+
 0.23    2015-04-16 (PERLANCAR)
 
 	- Add subcommand: dists-by-dep-count.
