--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.25    2015-04-22 (PERLANCAR)
+
+	- [Bugfix] Fix SQL error when creating schema.
+
+
 0.24    2015-04-21 (PERLANCAR)
 
 	- deps: Accept multiple modules, speed up query.
