--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for App-lcpan
 0.33    2015-04-29 (PERLANCAR)
 
         - [Bugfix] (update schema) Mixed up 'has_child' and 'num_sep' columns
-          When filling the 'namespace' table. So we need to empty and re-fill
+          when filling the 'namespace' table. So we need to empty and re-fill
           the table.
 
         - [Bugfix] update: Forgot to update 'namespace' table when adding a new
@@ -12,7 +12,7 @@ Revision history for App-lcpan
 
 0.32    2015-04-29 (PERLANCAR)
 
-        - Bump database schema version to v6 (add table namespaces). This is
+        - Bump database schema version to v6 (add 'namespace' table). This is
           mostly to help speed up tab completion query when completing module
           name.
 
