--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.38    2015-06-10 (PERLANCAR)
+
+	- [Bugfix] Update referenced function name in lcpanm.
+
+
 0.37    2015-06-09 (PERLANCAR)
 
         - [dist] Add missing prereq to PerlIO::gzip.
