--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.47    2015-07-27 (PERLANCAR)
+
+	- [ux] Show local/remote size which exceeds size.
+
+
 0.46    2015-07-02 (PERLANCAR)
 
         - [ux] Add alias -l for --detail (like in ls).
