--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for App-lcpan
 
+0.48    2015-08-11 (PERLANCAR)
+
+	- Save about 10ms of startup time (74ms -> 64ms) by replacing
+	  Module:List with PERLANCAR::Module::List.
+
+	- [Bugfix] Avoid SQL error when there are nulls in IN(...) clause.
+
+
 0.47    2015-07-27 (PERLANCAR)
 
 	- [ux] Show local/remote size which exceeds size.
