--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for App-lcpan
 
+0.49    2015-08-11 (PERLANCAR)
+
+	- No functional changes.
+
+	- Shave about 8ms (64ms -> 56ms) when doing completion by replacing
+	  Log::Any with Log::Any::IfLOG.
+
+
 0.48    2015-08-11 (PERLANCAR)
 
 	- Save about 10ms of startup time (74ms -> 64ms) when doing completion,
