--- a/Changes
+++ b/Changes
@@ -1,11 +1,20 @@
 Revision history for App-lcpan
 
+0.50    2015-08-11 (PERLANCAR)
+
+	- No functional changes.
+
+	- Shave about 6ms of startup time (56ms -> 50ms) when doing completion,
+	  by delay-loading POSIX and avoiding experimental (+Carp) in App::lcpan
+	  as well as in Perinci::Sub::Complete and Complete::Util.
+
+
 0.49    2015-08-11 (PERLANCAR)
 
 	- No functional changes.
 
-	- Shave about 8ms (64ms -> 56ms) when doing completion by replacing
-	  Log::Any with Log::Any::IfLOG.
+	- Shave about 8ms of startup time (64ms -> 56ms) when doing completion,
+	  by replacing Log::Any with Log::Any::IfLOG.
 
 
 0.48    2015-08-11 (PERLANCAR)
