--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for App-lcpan
 
+0.51    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.50    2015-08-11 (PERLANCAR)
 
 	- No functional changes.
