--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for App-lcpan
 
+0.55    2015-10-20 (PERLANCAR)
+
+	- deps: Add --with-xs-or-pp to show dependency is XS/PP.
+
+	- Warn about modules that don't have dist ID.
+
+	- Avoid perl undef warning.
+
+
 0.54    2015-10-09 (PERLANCAR)
 
 	- Add convenience commands: copy-rel & copy-mod.
