--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for App-lcpan
 
+0.56    2015-11-21 (PERLANCAR)
+
+	- stats: Add num_authors_with_releases.
+
+	- [dist] Bump version of IPC::System::Options to fixed 0.22
+	  version.
+
+
 0.55    2015-10-20 (PERLANCAR)
 
 	- deps: Add --with-xs-or-pp to show dependency is XS/PP.
