Adjustments so lcpan is also suitable to be used as a daemon
- Cache DBI database handle so we don't have to reconnect for every connection
- Tag some functions and arguments to mark them as unfit for being used in a
  daemon
- A couple of other adjustments

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.64    2016-01-16 (PERLANCAR) (unreleased)
+
+        - Adjust so we can be used like a daemon.
+
+
 0.63    2016-01-06 (PERLANCAR)
 
 	- [Bugfix] Propagate error from _update_index().
