--- a/Changes
+++ b/Changes
@@ -11,7 +11,7 @@ Revision history for App-lcpan
 
         - This version forces a full reindex.
 
-        - New subcommands: contents,
+        - New subcommands: contents, scripts.
 
 
 0.66    2016-02-07 (PERLANCAR)
