--- a/Changes
+++ b/Changes
@@ -16,7 +16,7 @@ Revision history for App-lcpan
         - This version forces a full reindex.
 
         - New subcommands: contents, scripts, mentions,
-          authors-by-mod-mention-count.
+          authors-by-mod-mention-count, scripts-from-same-dist.
 
 
 0.66    2016-02-07 (PERLANCAR)
