--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for App-lcpan
 
-0.78    2016-02-17 (PERLANCAR) (unreleased)
+0.78    2016-02-17 (PERLANCAR)
 
         [Bug fixes]
 
