--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-lcpan
 
+0.83    2016-03-12 (PERLANCAR)
+
+	- Add subcommand: changes.
+
+
 0.82    2016-03-10 (PERLANCAR)
 
         - Add subcommand: mentions-for-all-mods.
