--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for App-lcpan
 
+0.86    2016-04-15 (PERLANCAR)
+
+	- [Bugfix] Fix misnumbering in log statement because we 'next'
+	  before incrementing counter.
+
+	- Add subcommand: src.
+
+	- doc: Also page --raw result.
+
+
 0.85    2016-03-17 (PERLANCAR)
 
 	- changes: Allow specifying script name in addition to module/dist.
